# symulacje-fizyczne

baczek/: camera.py  enums.py  imgui.ini  main.py  pyproject.toml  shape.py
baczek/shaders/: fragment.glsl  vertex.glsl
zelek/: imgui.ini  main.py  pyproject.toml
zelek/zelek.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
